ZYB-001 returned to VSC after break